public/css/main.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Open+Sans:wght@400;600&display=swap");
.app {
  display: flex;
  flex-direction: column;
  background-color: #f2f2f2;
  height: 100%;
}

.title-font, .main-logo span, .text-button, .footer h3 {
  font-family: "Montserrat", sans-serif;
}

.text-font, .landing-hero .all-containing-container h1, .landing-hero .all-containing-container p, .landing-hero .all-containing-container .buy, .amounts .texty div, .footer {
  font-family: "Open Sans", sans-serif;
}

.all-containing-container {
  box-sizing: border-box;
  min-width: 100%;
}

@media (min-width: 0) {
  .all-containing-container {
    padding: 0 1em;
  }
}

@media (min-width: 500px) {
  .all-containing-container {
    padding: 0 5em;
  }
}

@media (min-width: 1024px) {
  .all-containing-container {
    padding: 0 4em;
  }
}

@media (min-width: 1200px) {
  .all-containing-container {
    padding: 0 8em;
  }
}

.main-logo {
  color: #f2f2f2;
  align-items: center;
  display: flex;
}

.main-logo span {
  margin-left: 0.5em;
  font-weight: 900;
  font-size: 1.8em;
  letter-spacing: 0.1em;
}

.main-logo img {
  margin-bottom: 0.4em;
  width: 50px;
}

nav.main {
  position: absolute;
  top: 0;
  width: 100%;
  margin: 0;
  height: 4em;
  background-color: rgba(10, 10, 10, 0.2);
  display: flex;
  align-items: center;
  overflow: hidden;
}

nav.main .main-logo {
  max-width: 50px;
  padding-top: 0.1em;
}

nav.main .all-containing-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav.main .buttons {
  display: flex;
}

nav.main .buttons .signup {
  display: none;
}

@media (min-width: 0) {
  nav.main .buttons .signup {
    display: none;
  }
}

@media (min-width: 1024px) {
  nav.main .buttons .signup {
    display: flex;
  }
}

.text-button {
  cursor: pointer;
  font-weight: 600;
  font-size: 1.2em;
  background-color: #f2f2f2;
  color: #9b50ff;
  border-radius: 1.5em;
  padding: 0.5em 2em;
  height: 1.2em;
  display: inline-flex;
  align-items: center;
  margin-left: 1em;
  transition: 350ms;
  -webkit-user-select: none;
  /* Safari */
  -moz-user-select: none;
  /* Firefox */
  -ms-user-select: none;
  /* IE10+/Edge */
  user-select: none;
  /* Standard */
}

.text-button:hover {
  background-color: #9b50ff;
  color: #f2f2f2;
  transition: 350ms;
}

.text-button:active {
  background-color: #7e1dff;
  color: #f2f2f2;
  transition: 150ms;
}

.landing-hero {
  width: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/memeunity-banner.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  height: 800px;
}

.landing-hero .all-containing-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: #f2f2f2;
}

.landing-hero .all-containing-container h1 {
  text-shadow: 1px 1px 7px #0a0a0a;
  margin: 0;
  line-height: 100%;
}

@media (min-width: 0) {
  .landing-hero .all-containing-container h1 {
    font-size: 1.5em;
  }
}

@media (min-width: 320px) {
  .landing-hero .all-containing-container h1 {
    font-size: 1.25em;
  }
}

@media (min-width: 500px) {
  .landing-hero .all-containing-container h1 {
    font-size: 2em;
  }
}

@media (min-width: 1024px) {
  .landing-hero .all-containing-container h1 {
    font-size: 3em;
  }
}

.landing-hero .all-containing-container h1 span {
  color: #9b50ff;
}

.landing-hero .all-containing-container p {
  font-style: italic;
}

.landing-hero .all-containing-container .buy {
  box-shadow: 1px 1px 7px rgba(10, 10, 10, 0.5);
  letter-spacing: 0.05em;
  color: #9b50ff;
  background-color: #f2f2f2;
  padding: 1em 2em;
  border-radius: 5%;
}

.amounts {
  margin: 3em auto 3em auto;
}

.amounts .texty {
  display: flex;
  justify-content: space-between;
}

.amounts .texty div {
  font-weight: 600;
}

.amounts .texty.after {
  margin-top: 5px;
}

.amounts .texty.before {
  margin-bottom: 5px;
}

.amounts .bar {
  height: 10px;
  border-radius: 5px;
  background-color: #f2f2f2;
}

.amounts .progress {
  height: 100%;
  background-color: #9b50ff;
  width: 30%;
  border-radius: 5px;
}

@media (min-width: 0) {
  .amounts {
    width: 20em;
  }
}

@media (min-width: 500px) {
  .amounts {
    width: 100%;
  }
}

@media (min-width: 1024px) {
  .amounts {
    width: 40em;
  }
}

.footer {
  background-color: #190e37;
  width: 100%;
  color: #f2f2f2;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

@media (min-width: 0) {
  .footer {
    height: 850px;
  }
}

@media (min-width: 1024px) {
  .footer {
    height: 400px;
  }
}

.footer h3 {
  font-size: 1.5em;
  font-weight: 700;
  margin: 0;
  margin-top: 0.4em;
  margin-bottom: 1em;
}

.footer .main-logo {
  margin-bottom: 0.8em;
}

.footer .all-containing-container {
  display: flex;
  justify-content: space-between;
}

@media (min-width: 0) {
  .footer .all-containing-container {
    flex-direction: column;
    align-items: center;
    min-width: 0;
    max-width: 100%;
  }
}

@media (min-width: 500px) {
  .footer .all-containing-container {
    min-width: 0;
    max-width: 100%;
  }
}

@media (min-width: 1024px) {
  .footer .all-containing-container {
    align-items: flex-start;
    flex-direction: row;
    max-width: 100%;
  }
}

.footer .all-containing-container>div {
  text-align: start;
}

.footer .all-containing-container>div p, .footer .all-containing-container>div ul {
  color: rgba(242, 242, 242, 0.8);
  margin: 0;
  font-size: 0.9em;
  line-height: 1.6em;
}

.footer .all-containing-container>div ul {
  list-style-type: none;
  padding-left: 0;
}

.footer .all-containing-container>div ul li {
  display: flex;
}

.footer .all-containing-container>div ul li .bullet {
  color: rgba(242, 242, 242, 0.6);
}

.footer .all-containing-container>div ul li a {
  margin-left: 0.8em;
}

.footer .all-containing-container>div ul li:hover {
  color: memeunity-white;
}

.footer .all-containing-container>div ul li:hover .bullet {
  color: rgba(242, 242, 242, 0.8);
}

.footer .all-containing-container>div a {
  text-decoration: dotted;
  text-align: center;
  color: rgba(242, 242, 242, 0.9);
}

.footer .all-containing-container>div .social {
  width: 10em;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 1em auto auto auto;
  height: 3em;
}

.footer .all-containing-container>div .social i {
  font-size: 2em;
}

@media (min-width: 1024px) {
  .footer .all-containing-container>div {
    width: 23%;
  }
}

@media (min-width: 0) {
  .footer .all-containing-container>div {
    width: 100%;
  }
}

#footeremail {
  box-sizing: border-box;
  width: 100%;
  background-color: #2b1860;
  border-radius: 1em;
  border-color: rgba(242, 242, 242, 0.8);
  margin-top: 1.2em;
  margin-bottom: 10px;
  margin-right: 0;
  padding: 0.3em 1em 0.3em 1em;
  color: #f2f2f2;
  padding-left: 1em;
}

#footeremail:hover {
  background-color: #3e2388;
  border: solid 2px #f2f2f2;
}

#footeremail:focus {
  outline: none;
}

.emailbutton {
  box-sizing: border-box;
  -webkit-user-select: none;
  /* Safari */
  -moz-user-select: none;
  /* Firefox */
  -ms-user-select: none;
  /* IE10+/Edge */
  user-select: none;
  /* Standard */
  display: inline-flex;
  align-items: center;
  justify-content: space-around;
  cursor: pointer;
  width: 100%;
  padding: 0.3em;
  border-radius: 1em;
  border: solid 2px rgba(242, 242, 242, 0.8);
  font-weight: 700;
}

.emailbutton:hover {
  background-color: #2b1860;
  border: solid 2px #f2f2f2;
}

.emailbutton:active {
  background-color: #f2f2f2;
  color: #190e37;
  border: solid 2px #190e37;
}

/*------------------------------------------------------------------
-------------------------------------------------------------------*/

.modal-content {
  background-color: #3d3535 !important;
  color: #fff !important;
  border: none;
  border-radius: 0;
  box-shadow: none;
}

.modal-content .form-control {
  background-color: grey;
}

.modal-header, .modal-footer {
  padding: 3rem;
  border-color: rgba(255, 255, 255, 0.2);
  display: block !important;
}

.modal-footer {
  margin: 0 auto;
}

.modal-body {
  padding: 3rem;
}

.close, .close:hover, .close:focus {
  color: #fff !important;
  text-shadow: none;
  opacity: 0.5;
  float: right !important;
  margin: 0 !important;
  padding: 0.5rem !important;
}

.close:hover {
  opacity: 1;
}

.btn {
  position: relative;
  margin-left: 10px !important;
  margin-right: 10px !important;
  padding: 10px 30px !important;
  z-index: 1;
}

.btn-default {
  color: white !important;
}

.text-button {
  padding: 1em 2em;
}

.alert-area {
  max-height: 100%;
  position: fixed;
  bottom: 15px;
  right: 20px;
  z-index: 999;
}

.alert-box {
  color: white;
  background: #9b50ff;
  font-size: 16px;
  line-height: 1.3em;
  padding: 10px 15px;
  margin: 5px 10px;
  position: relative;
  border-radius: 5px;
  transition: opacity 0.5s ease-in;
  word-wrap: break-word;
}

.alert-content {
  padding-right: 1em;
}

.dark-mode .alert-box {
  color: white;
  background: rgba(0, 0, 0, 1);
}

.alert-box.hide {
  opacity: 0;
}

.alert-close {
  background: transparent;
  width: 12px;
  height: 12px;
  position: absolute;
  top: 15px;
  right: 15px;
}

.alert-close:before, .alert-close:after {
  content: '';
  width: 15px;
  border-top: solid 2px #333;
  position: absolute;
  top: 5px;
  right: -1px;
  display: block;
}

.dark-mode .alert-close:before, .dark-mode .alert-close:after {
  border-top: solid 2px white;
}

.alert-close:before {
  transform: rotate(45deg);
}

.alert-close:after {
  transform: rotate(135deg);
}

.alert-close:hover:before, .alert-close:hover:after {
  border-top: solid 2px #d8d8d8;
}

@media (max-width: 767px) and (min-width: 481px) {
  .alert-area {
    left: 100px;
    right: 100px;
  }
}

@media (min-width: 768px) {
  .alert-area {
    width: 350px;
    right: 2em;
    margin: 0 auto;
    bottom: 2em;
  }
}

.alert-message-container {
  text-align: center;
  line-height: 2.5em;
  margin-top: 50px;
}

.alert-message-box {
  font-size: 20px;
  width: 300px;
  border: solid 1px #444;
  padding: 10px 15px;
  outline: none;
  transition: box-shadow 0.1s;
}

.alert-message-box:focus {
  box-shadow: 0 0 15px 2px #888;
}

.alert-message-button {
  font-size: 18px;
  color: white;
  background: #14b9ff;
  width: 250px;
  border: solid 1px #14b9ff;
  padding: 10px 20px;
  margin-top: 5px;
  cursor: pointer;
  outline: none;
  transition: background 0.1s;
}

.alert-message-button:hover, .alert-message-button:focus, .alert-message-button:active {
  background: #7dd8ff;
}

/*------------------------------------------------------------------

